# INEX

./: README.md
INEX/: CMakeLists.txt  package.xml
INEX/launch/: automapping.launch
INEX/map/: mars_map.pgm
INEX/src/: auto.sh  color_detection.cpp  compress.sh  inex.cpp  manual.sh  power.sh  save_image.cpp
remote/: CMakeLists.txt  package.xml
remote/src/: get.sh  remote.cpp
